tests/testcases/invalid/semantic/94_bitwise_and_assign_to_rvalue.ciel
// Error: bitwise AND assignment to rvalue
int main() {
    int a = 15;

    // Error: (a--) is rvalue
    (a--) &= 7;

    return 0;
}
